[package]
name = "cf-access"
version = "0.0.0"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2021"
description = "Super simple library for validating Cloudflare Access JWTs"
license = "MIT"

[dependencies]
jwtk = "0.4.0"
reqwest = { version = "0.12.15", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
axum = "0.8.3"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["env"]
env = []
